fix: get-caller-identity로 수정

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,5 +16,5 @@ jobs:
 
       - name: Test AWS CLI
         run:
-          aws sts get-caller-indentity
+          aws sts get-caller-identity
           aws ecr describe-repositories
