--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,6 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Test AWS CLI
-        run:
+        run: |
           aws sts get-caller-identity
           aws ecr describe-repositories
